# choptions

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
nginx/: default.conf
src/options/: __init__.py  app.py  cli.py  domain.py  heatmap.py
tests/: conftest.py  test_cli.py  test_domain.py
tests/e2e/: conftest.py  test_app.py
tests/integration/: conftest.py  test_app.py  test_cli.py
tests/unit/: test_domain.py
