[project]
name = "options"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Charlie", email = "email@email.com" }]
dependencies = [
    "typer>=0.12.3",
    "streamlit>=1.37.0",
    "watchdog>=4.0.1",
    "pytest>=8.3.2",
    "numpy>=2.0.1",
    "scipy>=1.14.0",
    "pyright>=1.1.374",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
options = 'options.cli:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/options"]
