[project]
name = "options"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "typer>=0.12.3",
    "streamlit>=1.37.0",
    "watchdog>=4.0.1",
    "numpy>=2.0.1",
    "scipy>=1.14.0",
    "plotly>=5.23.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pyright>=1.1.374",
    "pytest-playwright>=0.5.1",
    "playwright>=1.45.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/options"]
